🔧 Añadir método para encontrar cabinas por ID de avión en AirplaneCabinRepository; mejorar aleatorización de ciudades y vuelos en FlightsAdministrationService; eliminar dirección del servidor en application.properties